# agente_de_codigo

./: .env.example  .eslintrc.cjs  .gitignore  .pnpmfile.cjs  AGENTS.md  CLAUDE.md  MINIMAX_SETUP.md  README.md  ecosystem.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  setup.sh  tsconfig.base.json
.github/workflows/: ci.yml  code-quality.yml
scripts/: audit-system-stability.sh  dev_e2e.sh  fix-memory-issues.sh  fix-system-stability.mjs  health-check.sh  monitor-memory.mjs  run-agents.sh  run-python-agent.sh  run-tests.sh  test-full-integration-simple.sh  test-full-integration.sh  test-integration-simple.cjs  test-integration.js  test-minimax-connection.js  test-orchestrator-ipc.sh  test-orchestrator-simple.sh  test-orchestrator-ts.sh  test-quality-agent-simple.sh  test-quality-agent.sh  test-security-agent.sh  test_database_config.py  ts-smoke-simple.mjs  ts-smoke.mjs  update-dependencies.sh  validate-agent-tools.sh  validate-phase1-simple.sh  validate-phase1.sh  validate-stability.sh  validate-versions.js  verify-paths.sh
